@@ -1,3 +1,0 @@
-To install django-maintenancemode just run the following command from your shell:
-
-    python setup.py install
