@@ -2,10 +2,52 @@
 django-maintenancemode
 ======================
 
-Django maintenance mode is a middleware that allows you to temporary shutdown
-your site for non staff users and show them a page that the site is down for
-maintenance. Logged in users having staff credentials can still fully use
-the site.
+django-maintenancemode is a middleware that allows you to temporary shutdown
+your site for maintenance work.
 
-For further documentation please look at: 
-http://code.google.com/p/django-maintenancemode/
+Logged in users having staff credentials can still fully use
+the site as can users visiting the site from an ip address defined in
+Django's INTERNAL_IPS.
+
+
+Installation
+============
+
+* Download django-maintenancemode from http://pypi.python.org/pypi/django-maintenancemode
+  or http://code.google.com/p/django-maintenancemode/
+* Install using: `python setup.py install`
+* In your Django settings file add maintenancemode to your MIDDLEWARE_CLASSES.
+  Make sure it comes after Django's AuthenticationMiddleware. Like so::
+
+   MIDDLEWARE_CLASSES = (
+       'django.middleware.common.CommonMiddleware',
+       'django.contrib.sessions.middleware.SessionMiddleware',
+       'django.contrib.auth.middleware.AuthenticationMiddleware',
+       'django.middleware.doc.XViewMiddleware',
+   
+       'maintenancemode.middleware.MaintenanceModeMiddleware',
+   )
+
+* django-maintenancemode works the same way as handling 404 or 500 error in
+  Django work. It adds a handler503 which you can override in your main urls.py
+  or you can add a 503.html to your templates directory.
+* In your Django settings file add a variable called MAINTENANCE_MODE. Setting
+  this variable to True activates the middleware.
+
+
+Configuration
+=============
+If you do not configure the settings below in your own project settings.py,
+they assume default values:
+
+MAINTENANCE_MODE
+  Boolean. Enable/disable maintenance mode.
+  Default: False
+ 
+Some observations:
+
+* If user is logged in and staff member, the maintenance page is
+  not displayed.
+
+* If user's ip is in INTERNAL_IPS, the maintenance page is
+  not displayed.
