@@ -3,22 +3,28 @@ use_setuptools()
 
 from setuptools import setup, find_packages
 
-version = '0.9'
+version = '0.9.1'
+
+def read_file(name):
+    return open(os.path.join(os.path.dirname(__file__), 
+                             name)).read()    
+
+readme = read_file('README')
+changes = read_file('CHANGES')
 
 setup(
     name='django-maintenancemode',
     version=version,
     description='Django-maintenancemode allows you to temporary shutdown your site for maintenance work',
-    long_description='Django maintenance mode is a middleware that allows you to temporary shutdown your site for non staff users and show them a page that the site is down for maintenance. Logged in users having staff credentials can still fully use the site.',
+    long_description='\n\n'.join([readme, changes]),
     author='Remco Wendt',
     author_email='remco@maykinmedia.nl',
     license = "BSD",
     platforms = ["any"],
     url='http://code.google.com/p/django-maintenancemode/',
     download_url='',
-    package_dir = {'': 'src'},
-    packages=find_packages('src'),
-    include_package_data=True,
+    packages=['maintenancemode'],
+    include_package_data = False,
     classifiers=[
             'Development Status :: 4 - Beta',
             'Environment :: Web Environment',
